--- a/ProyectoGestiónEscolar/CapaPresentacion/CapaPresentacion.csproj
+++ b/ProyectoGestiónEscolar/CapaPresentacion/CapaPresentacion.csproj
@@ -32,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Bunifu_UI_v1.5.3">
-      <HintPath>..\..\..\..\..\Desktop\Bunifu_UI_v1.5.3.dll</HintPath>
+      <HintPath>..\..\..\..\..\Downloads\Bunifu_UI_v1.5.3.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
@@ -54,17 +54,47 @@
     <Compile Include="FrmPaginaPrincipal.Designer.cs">
       <DependentUpon>FrmPaginaPrincipal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Ingresar_Encargado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ingresar_Encargado.Designer.cs">
+      <DependentUpon>Ingresar_Encargado.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Inicio.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Inicio.Designer.cs">
+      <DependentUpon>Inicio.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Inscribir_alumnos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Inscribir_alumnos.Designer.cs">
+      <DependentUpon>Inscribir_alumnos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Login.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Pantalla_carga.cs">
+    <Compile Include="menu_alumnos.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="menu_alumnos.Designer.cs">
+      <DependentUpon>menu_alumnos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="menu_inicio.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="menu_inicio.Designer.cs">
+      <DependentUpon>menu_inicio.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Pantalla_Carga.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Pantalla_carga.Designer.cs">
-      <DependentUpon>Pantalla_carga.cs</DependentUpon>
+    <Compile Include="Pantalla_Carga.Designer.cs">
+      <DependentUpon>Pantalla_Carga.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -83,11 +113,26 @@
     <EmbeddedResource Include="FrmPaginaPrincipal.resx">
       <DependentUpon>FrmPaginaPrincipal.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Ingresar_Encargado.resx">
+      <DependentUpon>Ingresar_Encargado.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Inicio.resx">
+      <DependentUpon>Inicio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Inscribir_alumnos.resx">
+      <DependentUpon>Inscribir_alumnos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Pantalla_carga.resx">
-      <DependentUpon>Pantalla_carga.cs</DependentUpon>
+    <EmbeddedResource Include="menu_alumnos.resx">
+      <DependentUpon>menu_alumnos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="menu_inicio.resx">
+      <DependentUpon>menu_inicio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Pantalla_Carga.resx">
+      <DependentUpon>Pantalla_Carga.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
