--- a/ProyectoGestiónEscolar/CapaDatos/CapaDatos.csproj
+++ b/ProyectoGestiónEscolar/CapaDatos/CapaDatos.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Conexion.cs" />
     <Compile Include="DAlumno.cs" />
+    <Compile Include="DEncargado.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
