--- a/ProyectoGestiónEscolar/CapaPresentacion/CapaPresentacion.csproj
+++ b/ProyectoGestiónEscolar/CapaPresentacion/CapaPresentacion.csproj
@@ -48,6 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ingresar_Alumno.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ingresar_Alumno.Designer.cs">
+      <DependentUpon>Ingresar_Alumno.cs</DependentUpon>
+    </Compile>
     <Compile Include="Ingresar_Encargado.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,12 +65,6 @@
     </Compile>
     <Compile Include="Inicio.Designer.cs">
       <DependentUpon>Inicio.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Ingresar_alumnos.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Ingresar_alumnos.Designer.cs">
-      <DependentUpon>Ingresar_alumnos.cs</DependentUpon>
     </Compile>
     <Compile Include="Inscripcion_alumno.cs">
       <SubType>Form</SubType>
@@ -122,14 +122,14 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Ingresar_Alumno.resx">
+      <DependentUpon>Ingresar_Alumno.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Ingresar_Encargado.resx">
       <DependentUpon>Ingresar_Encargado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Inicio.resx">
       <DependentUpon>Inicio.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Ingresar_alumnos.resx">
-      <DependentUpon>Ingresar_alumnos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Inscripcion_alumno.resx">
       <DependentUpon>Inscripcion_alumno.cs</DependentUpon>
