--- a/ProyectoGestiónEscolar/CapaDatos/CapaDatos.csproj
+++ b/ProyectoGestiónEscolar/CapaDatos/CapaDatos.csproj
@@ -33,6 +33,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,8 +44,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexion.cs" />
+    <Compile Include="DDepartamento.cs" />
     <Compile Include="DAlumno.cs" />
     <Compile Include="DEncargado.cs" />
+    <Compile Include="DMunicipio.cs" />
+    <Compile Include="DTipo_Encargado.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
