--- a/ProyectoGestiónEscolar/CapaDatos/CapaDatos.csproj
+++ b/ProyectoGestiónEscolar/CapaDatos/CapaDatos.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Conexion.cs" />
+    <Compile Include="DCiclo.cs" />
     <Compile Include="DDepartamento.cs" />
     <Compile Include="DAlumno.cs" />
     <Compile Include="DEncargado.cs" />
