--- a/ProyectoGestiónEscolar/CapaNegocios/CapaNegocios.csproj
+++ b/ProyectoGestiónEscolar/CapaNegocios/CapaNegocios.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NAlumno.cs" />
+    <Compile Include="NCiclo.cs" />
     <Compile Include="NDepartamento.cs" />
     <Compile Include="NEncargado.cs" />
     <Compile Include="NMunicipio.cs" />
