--- a/ProyectoGestiónEscolar/CapaDatos/CapaDatos.csproj
+++ b/ProyectoGestiónEscolar/CapaDatos/CapaDatos.csproj
@@ -49,8 +49,12 @@
     <Compile Include="DDepartamento.cs" />
     <Compile Include="DAlumno.cs" />
     <Compile Include="DEncargado.cs" />
+    <Compile Include="DGrado.cs" />
+    <Compile Include="DInscripcion.cs" />
     <Compile Include="DMunicipio.cs" />
+    <Compile Include="DSeccion.cs" />
     <Compile Include="DTipo_Encargado.cs" />
+    <Compile Include="DTipo_Inscripcion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
